회원가입 페이지

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
 					<span id="nameMes" class="message"></span>
 					<input type="text" id="name" class="line" required size="30" placeholder="이름">
 				</div>
-				<div>
+				<div class="inputArea">
 					<label for="pwArea">비밀번호</label>
 					<span id="pwMes" class="message"></span>
 					<input type="password" id="pwArea" class="line" required size="30" placeholder="비밀번호">
 				</div>
-				<div>
+				<div class="inputArea">
 					<label for="phone">휴대전화</label>
 					<span id="phMes" class="message"></span>
 					<input type="text" id="phone" class="line" required size="30" placeholder="'-' 구분없이 입력">
 				</div>
-				<div>
+				<div class="inputArea">
 					<label for="born">생년월일</label>
 					<span id="bMes" class="message"></span>
 					<input type="text" id="born" class="line" required size="8" placeholder="생년월일">
@@ -96,18 +96,18 @@
 					<input type="text" id="idArea" class="line" required size="30" placeholder="아이디" value="">
 					<button>중복확인</button>
 				</div>
-				<div>
+				<div class="inputArea">
 					<label for="pwArea2">비밀번호확인</label>
 					<span id="pwMes2" class="message"></span>
 					<input type="password" id="pwArea2" class="line" required size="30" placeholder="비밀번호확인">
 				</div>
-				<div>
+				<div class="inputArea">
 					<label for="email">이메일</label>
 					<span id="eMes" class="message"></span>
 					<input type="text" id="email" class="line" required size="30" placeholder="이메일">
 				</div>
 			</div>
-			<div class="jbottome">
+			<div class="jbottom">
 				<div>
 					<span class="gnederArea">성별</span>
 					<input type="radio" name="gender" id="female">
