--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-	<div class="join-pc">
+	<div class="join">
 		<div class="jbg"></div>
 		<div class="join flex-between">
 			<div class="jimg">
@@ -115,59 +115,59 @@
 				</div>
 				<div class="jmiddle jmiddle-m flex-between">
 					<div class="inputArea">
-						<label for="name">이름</label>
-						<span id="nameMes" class="message"></span>
-						<input type="text" id="name" class="line" required size="30" placeholder="이름" tabindex=1>
+						<label for="_name">이름</label>
+						<span id="_nameMes" class="message"></span>
+						<input type="text" id="_name" class="line" required size="30" placeholder="이름" tabindex=1>
 					</div>
 					<div class="inputArea id-section">
-						<label for="idArea">아이디</label>
-						<span id="idMes" class="message"></span>
+						<label for="_idArea">아이디</label>
+						<span id="_idMes" class="message"></span>
 						<div class="flex-between">
-							<input type="text" id="idArea" class="line" required size="30" placeholder="아이디" value=""
+							<input type="text" id="_idArea" class="line" required size="30" placeholder="아이디" value=""
 								tabindex=2>
 							<button>중복확인</button>
 						</div>
 					</div>
 					<div class="inputArea">
-						<label for="pwArea">비밀번호</label>
-						<span id="pwMes" class="message"></span>
-						<input type="password" id="pwArea" class="line" required size="30" placeholder="비밀번호"
+						<label for="_pwArea">비밀번호</label>
+						<span id="_pwMes" class="message"></span>
+						<input type="password" id="_pwArea" class="line" required size="30" placeholder="비밀번호"
 							tabindex=3>
 					</div>
 					<div class="inputArea">
-						<label for="pwArea2">비밀번호 확인</label>
-						<span id="pwMes2" class="message"></span>
-						<input type="password" id="pwArea2" class="line" required size="30" placeholder="비밀번호확인"
+						<label for="_pwArea2">비밀번호 확인</label>
+						<span id="_pwMes2" class="message"></span>
+						<input type="password" id="_pwArea2" class="line" required size="30" placeholder="비밀번호확인"
 							tabindex=4>
 					</div>
 					<div class="inputArea">
-						<label for="phone">휴대전화</label>
-						<span id="phMes" class="message"></span>
-						<input type="text" id="phone" class="line" required size="30" placeholder="'-' 구분없이 입력"
+						<label for="_phone">휴대전화</label>
+						<span id="_phMes" class="message"></span>
+						<input type="text" id="_phone" class="line" required size="30" placeholder="'-' 구분없이 입력"
 							tabindex=5>
 					</div>
 					<div class="inputArea">
-						<label for="email">이메일</label>
-						<span id="eMes" class="message"></span>
-						<input type="text" id="email" class="line" required size="30" placeholder="이메일" tabindex=6>
+						<label for="_email">이메일</label>
+						<span id="_eMes" class="message"></span>
+						<input type="text" id="_email" class="line" required size="30" placeholder="이메일" tabindex=6>
 					</div>
 					<div class="inputArea">
-						<label for="born">생년월일</label>
-						<span id="bMes" class="message"></span>
-						<input type="text" id="born" class="line" required size="8" placeholder="생년월일" tabindex=7>
+						<label for="_born">생년월일</label>
+						<span id="_bMes" class="message"></span>
+						<input type="text" id="_born" class="line" required size="8" placeholder="생년월일" tabindex=7>
 					</div>
 				</div>
 					<div class="jbottom">
 						<div>
 							<span class="gnederArea">성별</span>
-							<input type="radio" name="gender" id="female">
-							<label for="female" class="gender female">여성</label>
-							<input type="radio" name="gender" id="male">
-							<label for="male" class="gender male">남성</label>
-							<span id="gMes" class="gendermessage"></span>
+							<input type="radio" name="_gender" id="_female">
+							<label for="_female" class="gender female">여성</label>
+							<input type="radio" name="_gender" id="_male">
+							<label for="_male" class="gender male">남성</label>
+							<span id="_gMes" class="gendermessage"></span>
 						</div>
 						<div class="signupbtn">
-							<input type="button" value="회원가입" class="btn" id="submit">
+							<input type="button" value="회원가입" class="btn" id="_submit">
 						</div>
 					</div>
 				</div>
