--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-	<div class="join">
+	<div id="join">
 		<div class="jbg"></div>
 		<div class="join flex-between">
 			<div class="jimg">
